HW4 Base 1.1 Users import to DB working

--- a/web/export/src/main/webapp/WEB-INF/templates/result.html
+++ b/web/export/src/main/webapp/WEB-INF/templates/result.html
@@ -22,6 +22,6 @@
     </tr>
     </tbody>
 </table>
-<h3><a href="/import">Import users</a></h3>
+<h3><a href=/?action=import>Import users</a></h3>
 </body>
 </html>
