--- a/web/export/src/main/webapp/WEB-INF/templates/result.html
+++ b/web/export/src/main/webapp/WEB-INF/templates/result.html
@@ -4,7 +4,7 @@
     <title>Uploaded users</title>
 </head>
 <body>
-<h4><a href="">Export XML</a></h4>
+<h4><a href="/">Export XML</a></h4>
 <h3>Uploaded users</h3>
 <table border="1" cellpadding="8" cellspacing="0">
     <thead>
