HW4 Base 1.4 small fixes

--- a/web/export/src/main/webapp/WEB-INF/templates/importResult.html
+++ b/web/export/src/main/webapp/WEB-INF/templates/importResult.html
@@ -4,7 +4,7 @@
     <title>Uploaded users</title>
 </head>
 <body>
-<h4><a href="/">Export XML</a></h4>
+<h4><a href="/export">Export XML</a></h4>
 <h2>Import results</h2>
 <h3>Success count: <a th:text="${sucessCount}"/></h3>
 <h3>Fails count: <a th:text="${failCount}"/> </h3>
