--- a/web/export/src/main/webapp/WEB-INF/templates/result.html
+++ b/web/export/src/main/webapp/WEB-INF/templates/result.html
@@ -4,7 +4,7 @@
     <title>Uploaded users</title>
 </head>
 <body>
-<h4><a href="/">Export XML</a></h4>
+<h4><a href="/export">Export XML</a></h4>
 <h3>Uploaded users</h3>
 <table border="1" cellpadding="8" cellspacing="0">
     <thead>
@@ -22,6 +22,6 @@
     </tr>
     </tbody>
 </table>
-<h3><a href=/?action=import>Import users</a></h3>
+<h3><a href=export/?action=import>Import users</a></h3>
 </body>
 </html>
