HW4 Base 1.5 small fixes

--- a/web/export/src/main/webapp/WEB-INF/templates/importResult.html
+++ b/web/export/src/main/webapp/WEB-INF/templates/importResult.html
@@ -6,8 +6,8 @@
 <body>
 <h4><a href="/export">Export XML</a></h4>
 <h2>Import results</h2>
-<h3>Success count: <a th:text="${sucessCount}"/></h3>
-<h3>Fails count: <a th:text="${failCount}"/> </h3>
+<h3>Success count: <a th:text="${sucessCount}"></a></h3>
+<h3>Fails count: <a th:text="${failCount}"></a> </h3>
 <h2>Failed users</h2>
 <table border="1" cellpadding="8" cellspacing="0">
     <thead>
