--- a/web/export/src/main/webapp/WEB-INF/templates/result.html
+++ b/web/export/src/main/webapp/WEB-INF/templates/result.html
@@ -5,9 +5,9 @@
 </head>
 <body>
 <h4><a href="">Export XML</a></h4>
-<h3>Failed users</h3>
+<h3>Fails:</h3>
 <ul>
-    <!--/*@thymesVar id="failed" type="java.util.List<ru.javaops.masterjava.export.UserExport$FailedEmail>"*/-->
+    <!--/*@thymesVar id="failed" type="java.util.List<ru.javaops.masterjava.export.Failed>"*/-->
     <li th:each="fail: ${failed}" th:text="${fail}"></li>
 </ul>
 </body>
